--- a/app/src/main/res/layout/activity_edit_account.xml
+++ b/app/src/main/res/layout/activity_edit_account.xml
@@ -49,14 +49,15 @@
                     android:textSize="18sp" />
 
                 <ImageView
-                    android:id="@+id/btn_edit_img"
+                    android:id="@+id/btn_edit"
                     android:layout_width="20dp"
                     android:layout_height="20dp"
                     android:layout_marginStart="8dp"
-                    android:src="@drawable/ic_editimg" />
+                    android:src="@drawable/ic_editimg"
+                    android:contentDescription="@string/imageview" />
             </LinearLayout>
 
-            <ImageButton
+            <androidx.appcompat.widget.AppCompatImageButton
                 android:id="@+id/btn_edit_img"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -65,7 +66,7 @@
                 android:src="@drawable/btn_edit_img"
                 app:layout_constraintBottom_toBottomOf="@+id/iv_edit_image"
                 app:layout_constraintStart_toStartOf="@+id/iv_edit_image"
-                tools:ignore="DuplicateIds" />
+                android:contentDescription="@string/imagebutton" />
 
             <TextView
                 android:id="@+id/titl_editprofile1"
