--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -20,11 +20,12 @@
             android:layout_marginTop="@dimen/_24dp">
 
             <ImageView
-                android:id="@+id/img_profile"
+                android:id="@+id/btn_profile"
                 android:layout_width="@dimen/_160dp"
                 android:layout_height="@dimen/_160dp"
                 android:src="@drawable/img_profile"
-                android:layout_gravity="center"/>
+                android:layout_gravity="center"
+                android:contentDescription="@string/imageview" />
 
             <LinearLayout
                 android:id="@+id/ll_username"
