--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <style name="ToolbarAppearance">
         <item name="android:textSize">18sp</item>
         <item name="android:fontFamily">@font/montserrat_semi_bold</item>
