--- a/app/src/main/res/layout/onboarding_slide3.xml
+++ b/app/src/main/res/layout/onboarding_slide3.xml
@@ -8,19 +8,17 @@
         android:id="@+id/img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="@dimen/_70dp"
+        android:contentDescription="@string/imageview"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/illust_onboarding3"
-        android:contentDescription="@string/imageview" />
+        app:srcCompat="@drawable/illust_onboarding3" />
 
     <TextView
         android:id="@+id/titleTv"
         android:layout_width="@dimen/_300dp"
         android:layout_height="wrap_content"
         android:layout_marginStart="@dimen/_16dp"
-        android:layout_marginTop="@dimen/_32dp"
         android:fontFamily="@font/montserrat_bold"
         android:letterSpacing="0.002"
         android:text="@string/onboarding_slide3_title"
