--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -19,8 +19,10 @@
     <color name="descTextColor">#444444</color>
     <color name="whiteTextColor">#FFFFFF</color>
     <color name="cardMainColor">#FDFEFF</color>
+    <color name="strokeColor">#EAEAEA</color>
     <color name="backgroundMainColor">#FFFFFF</color>
     <color name="lineMainColor">#C6C6C6</color>
     <color name="iconGrayColor">#676767</color>
+    <color name="backgroundDetailColor">#ECEFF1</color>
 
 </resources>
