--- a/app/src/main/res/layout/fragment_student.xml
+++ b/app/src/main/res/layout/fragment_student.xml
@@ -66,7 +66,7 @@
             app:layout_constraintTop_toBottomOf="@+id/rv_beststudents" />
 
         <TextView
-            android:id="@+id/tv_more"
+            android:id="@+id/tv_more1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/_16dp"
