--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -116,7 +116,7 @@
             android:layout_marginStart="@dimen/_16dp"
             android:layout_marginTop="@dimen/_20dp"
             android:layout_marginEnd="@dimen/_16dp"
-            android:layout_marginBottom="@dimen/_32dp"
+            android:layout_marginBottom="25dp"
             android:background="@drawable/btn_bg"
             android:elevation="@dimen/_15dp"
             android:fontFamily="@font/montserrat_bold"
