--- a/app/src/main/res/layout/item_list_task.xml
+++ b/app/src/main/res/layout/item_list_task.xml
@@ -65,11 +65,12 @@
 
             <TextView
                 android:id="@+id/tv_title_task"
-                android:layout_width="200dp"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/montserrat_bold"
                 android:letterSpacing="0.01"
-                android:maxLines="2"
+                android:maxLines="1"
+                android:layout_marginEnd="@dimen/_12dp"
                 android:textColor="@color/titleTextColor"
                 android:textSize="15sp"
                 app:layout_constraintStart_toStartOf="@+id/tv_category_task"
